# TestRepo

./: .gitignore  CMakeLists.txt
cmake/: RrtPlannerLibConfig.cmake  buildtest.cmake  install.cmake  library_source_gjk.cmake  windeployqt.cmake
doc/: .$Computing distance of a point to triangle.drawio.bkp  .$RrtPlannerLib.drawio.dtmp  .$gjk.drawio.bkp  .$gjk.drawio.dtmp  Computing distance of a point to a triangle.pptx  Computing distance of a point to triangle.drawio  GJK with distance.pptx  How to set up cmake project in Qt Creator.textClipping  RrtPlannerLib.drawio  directory_organization.txt  gjk.drawio
incl/: RrtPlannerLibGlobal.h
incl/RrtPlannerLib/: FrameworkDefines  Plan  RrtPlannerLibGlobal.h  Segment  Waypt
incl/RrtPlannerLib/framework/: EllMap.h  FrameworkDefines.h  GeometryHelper.h  LinearAlgebraHelper.h  Plan.h  PlanHelper.h  RootData.h  SMap.h  SMapHelper.h  SPlan.h  Segment.h  UblasHelper.h  UtilHelper.h  VectorF.h  VectorFHelper.h  VesRectangle.h  VesShape.h  Waypt.h  vessel.h
incl/RrtPlannerLib/framework/algorithm/gjk/: Gjk.h  GjkDefines.h  GjkFactory.h  IShape.h  PointShape.h  Polygon.h  Simplex.h
incl/RrtPlannerLib/framework/algorithm/gjk/internal/: GjkBasic.h  GjkComponentFactory.h  GjkComponentFactoryBasic.h  GjkComponentFactoryCreator.h  GjkComponentFactoryMinDist.h  GjkMinDist.h  Simplex.h  SimplexBasic.h  SimplexMinDist.h  Support.h  SupportBasic.h  SupportMinDist.h
src/framework/: EllMap.cpp  GeometryHelper.cpp  LinearAlgebraHelper.cpp  Plan.cpp  PlanHelper.cpp  RootData.cpp  SMap.cpp  SMapHelper.cpp  SPlan.cpp  Segment.cpp  UblasHelper.cpp  UtilHelper.cpp  VectorF.cpp  VectorFHelper.cpp  VesRectangle.cpp  VesShape.cpp  Vessel.cpp  Waypt.cpp
src/framework/algorithm/gjk/: Gjk.cpp  GjkFactory.cpp  IShape.cpp  PointShape.cpp  Polygon.cpp  Simplex.cpp
src/framework/algorithm/gjk/internal/: GjkBasic.cpp  GjkComponentFactoryBasic.cpp  GjkComponentFactoryCreator.cpp  GjkComponentFactoryMinDist.cpp  GjkMinDist.cpp  Simplex.cpp  SimplexBasic.cpp  SimplexMinDist.cpp  Support.cpp  SupportBasic.cpp  SupportMinDist.cpp
tests/: main.cpp
tests/framework/: EllMapQTests.cpp  EllMapQTests.h  LinearAlgebraHelperQTests.cpp  LinearAlgebraHelperQTests.h  PlanHelperQTests.cpp  PlanHelperQTests.h  PlanQTests.cpp  PlanQTests.h  RootDataQTests.cpp  RootDataQTests.h  SMapHelperQTests.cpp  SMapHelperQTests.h  SMapQTests.cpp  SMapQTests.h  SegmentQTests.cpp  SegmentQTests.h  UblasHelperQTests.cpp  UblasHelperQTests.h  VectorFHelperQTests.cpp  VectorFHelperQTests.h  VectorFQTests.cpp  VectorFQTests.h  VesRectangleQTests.cpp  VesRectangleQTests.h  VesselQTests.cpp  VesselQTests.h  WayptQTests.cpp  WayptQTests.h
tests/framework/algorithm/gjk/: GjkQTests.cpp  GjkQTests.h  PolygonQTests.cpp  PolygonQTests.h  SimplexQTests.cpp  SimplexQTests.h
tests/matlab/: util_calcSegmentAttributes.m
